# Pixuli

./: .gitignore  .prettierignore  .prettierrc  2.0-release-feature-list.md  AGENTS.md  CHANGELOG-ZH.md  CHANGELOG.md  CONTRIBUTING-ZH.md  CONTRIBUTING.md  LICENSE  README-EN.md  README-ZH.md  README.md  README.zh-CN.md  REFACTOR_PLAN.md  SCROLL_LOADING_README.md  TESTING.md  electron-builder.json  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  test-format.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  vitest.workspace.ts
archive/: README.md
archive/wasm/: Cargo.toml  README.md  package.json
archive/wasm/src/convert/: types.rs
benchmark/: README.md  package.json
docs/: 04-backlog.md  AI_MODELS.md  KEYBOARD_FEATURES.md  MODEL_DEVELOPMENT.md  QUICK_START.md  README.md  USAGE.md  USAGE_TUTORIAL.md  android-ui-optimization-suggestions.md  backlog.md  component-unification-strategy.md  empty-state-implementation-example.md  empty-state-ui-design.md  features.md  mobile-components-inventory.md  mobile-index-native-migration.md  mobile-migration-progress.md  next.config.ts  package.json  pixuli-project-plans.csv  tailwind.config.js  tensorflow-llama-ai-analysis.md  tensorflow-wasm-webp-optimization.md  (+4 more)
e2e/: .gitkeep  (+1 more)
pixuli-wasm/: Cargo.toml  README.md  index.d.ts  index.js
pixuli-wasm/src/: format_conversion.rs  image.rs  lib.rs  lib.rs.backup  webp.rs
pixuli-wasm/src/ai/: analysis.rs  mod.rs  model_handlers.rs  tensorflow.rs  types.rs
pixuli-wasm/src/format_conversion/: converters.rs  mod.rs
(+863 files in other folders)
