
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "pixuli_wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff"] }
webp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
