
[package]
authors = ["trueLoving"]
edition = "2021"
name = "pixuli_wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM 绑定（必需）
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"  # 异步支持

# 图片处理库
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff"] }
# WebP 库：在 WASM 目标上暂时禁用，因为 libwebp-sys 依赖 C 代码
# TODO: 寻找纯 Rust 实现的 WebP 库或使用条件编译
# webp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"
image = { version = "0.24", features = ["jpeg", "png", "gif", "bmp", "tiff"] }

[profile.release]
# 使用 "thin" LTO 而不是 "fat" LTO，构建速度更快，性能损失很小
lto = "thin"
strip = "symbols"
# 优化级别：3 是最高优化，但构建时间最长
# 可以考虑使用 "z" 或 "s" 来优化二进制大小，但这里保持 3 以获得最佳性能
opt-level = 3
# 启用代码生成优化
codegen-units = 1
